--- a/tsconfig.json
+++ b/tsconfig.json
@@ -14,11 +14,11 @@
     "resolveJsonModule": true,
     "isolatedModules": true,
     "jsx": "react-jsx",
-    "baseUrl": "./src",
+    "baseUrl": "src",
     "allowSyntheticDefaultImports": true,
     "noFallthroughCasesInSwitch": true,
     "paths": {
-      "app/*": ["src/*"]
+      "app/*": ["*"]
     }
   },
   "include": ["src"],
