--- a/tsconfig.json
+++ b/tsconfig.json
@@ -18,7 +18,7 @@
     "allowSyntheticDefaultImports": true,
     "noFallthroughCasesInSwitch": true,
     "paths": {
-      "app/*": ["*"]
+      "app/*": ["*", "src/*"]
     }
   },
   "include": ["src"],
